--- a/insurance-app.html
+++ b/insurance-app.html
@@ -206,7 +206,7 @@
                         Accessibility played a major role in our design process, and in development, we used WAVE to evaluate our output. 
                      </p>
                      <div class="view-next-btn-wtapper">
-                        <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:717cc642-3d89-4a79-8741-49910881dae7" target="_blank" class="view-btn">View Project</a>
+                        <!-- <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:717cc642-3d89-4a79-8741-49910881dae7" target="_blank" class="view-btn">View Project</a> -->
                         <a href="/remit-app.html" class="next-prev-link"> ⇠ Previous Project</a>┊
                         <a href="/elearn-app.html" class="next-prev-link">Next Project ⇢ </a>
                      </div>
