--- a/jobsite-app.html
+++ b/jobsite-app.html
@@ -173,7 +173,7 @@
                         with the development team and to get user feedback. Also, building the interactive version made the design handoff to the development team easier.
                      </p>
                      <div class="view-next-btn-wtapper">
-                        <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:2db4060f-207d-4666-b52f-25d37c063980" target="_blank" class="view-btn">View Project</a>
+                        <!-- <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:2db4060f-207d-4666-b52f-25d37c063980" target="_blank" class="view-btn">View Project</a> -->
                         <a href="/elearn-app.html" class="next-prev-link"> ⇠ Previous Project </a>┊
                         <a href="/network-app.html" class="next-prev-link"> Next Project ⇢</a> 
                      </div>
