--- a/elearn-app.html
+++ b/elearn-app.html
@@ -172,7 +172,7 @@
                         able to leverage our technical skills to work with the development team to make the handoff smooth, efficient and productive.
                      </p>
                      <div class="view-next-btn-wtapper">
-                        <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:b785ed02-3281-496b-bd90-499fd996fb15" target="_blank" class="view-btn">View Project</a>
+                       <!-- <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:b785ed02-3281-496b-bd90-499fd996fb15" target="_blank" class="view-btn">View Project</a> -->
                         <a href="/insurance-app.html" class="next-prev-link"> ⇠ Previous Project </a>┊
                         <a href="/jobsite-app.html" class="next-prev-link"> Next Project ⇢</a> 
                      </div>
