--- a/index.html
+++ b/index.html
@@ -75,15 +75,14 @@
          <div class="main">
             <div class="main-text">
                <div class="main-text-center">
-                  <h1>Product Designer & Design Technologist</h1>
+                  <h1>Product Leader, Designer & Technologist</h1>
                   <p class="project-desc">
-                     I’m an experienced and passionate Product Designer and Design Technologist with over 8+ years of experience researching, ideating, 
-                     and building digital products that achieve short and long-term business goals by collaborating with stakeholders to build/gather 
-                     requirements and more. Over the years I’ve had the opportunity to work on several great products reflecting a variety of domains. 
-                     From enterprise insurance applications to internal facing cybersecurity apps, I’ve worked on a variety of dynamic products in 
-                     agile and lean teams/environments. I leverage my engineering skills and understanding of JavaScript and popular libraries and 
-                     frameworks like React, to build live/interactive prototypes and collaborate with development/engineering teams to design 
-                     functionality and problem solve.
+                      I’m an experienced Product leader and Designer with a technical background and over 8+ years of experience identifying opportunities, 
+                     researching, ideating, designing, and building digital products that achieve short and long-term business goals. Over the years I’ve 
+                     had the opportunity to work on several great products reflecting a variety of domains. From enterprise finance and insurance applications 
+                     to internally and externally facing cybersecurity apps, I’ve worked on a variety of dynamic products in agile and lean teams/environments. 
+                     I leverage my engineering skills and background/understanding of JavaScript and popular libraries and frameworks like React, to build 
+                     live/interactive prototypes and collaborate with development/engineering teams to design functionality and solve problems.
                   </p>
                </div>
             </div>
