--- a/insurance-app.html
+++ b/insurance-app.html
@@ -78,9 +78,11 @@
                <div class="main-text-center">
                   <h1>Sym-Tech DAVE 2.0 UI</h1>
                   <p class="project-desc">
-                     As Product Design & Design Technology Lead at Sym-Tech, I juggled many exciting responsibilities. In addition to overseeing the 
-					 entire design thinking/ux process, I was responsible for assisting the development team in implementing designs and helping build, 
-					 test and ship digital products, leveraging both an agile and lean methodological approach.
+                As Digital Product & Design Lead at Sym-Tech,  I was tasked with building and managing digital products and building native UX practices. 
+                I led design and discovery workshops, gathered and documented  requirements, and oversaw the development of a scalable design system and 
+                component library. I led a small interdisciplinary team setting goals, and through collaboration, reaching them. In addition to overseeing 
+                the entire design thinking/ux process, I was responsible for assisting the development team in implementing designs and helping build, test 
+                and ship digital products, leveraging both an agile and lean methodological approach.
                   </p>
                   <br>
                   <div class="project-tag">
