--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
                   <span class="role">Multimedia</span>
 				  <span class="role">Information Architecture</span>
 				  <span class="role">UX Writing/Content Design</span>
-                  <span class="role">Sharepoint</span>
+                  <span class="role">A/B Testing</span>
                   <span class="role">Design Thinking</span>
                   <span class="role">Lean UX</span> 
                   <span class="role">Scrum</span>
                   <span class="role">Invision</span>
 				  <span class="role">Communication</span>
                   <span class="role">Accessibility</span>
-				  <span class="role">Sketch</span>
+				  <span class="role">Jira</span>
 				  <span class="role">3D</span>
                   <span class="role">Figma</span>
-				  <span class="role">Framer</span>
-                  <span class="role">WCAG</span>
+				  <span class="role">SQL</span>
+                  <span class="role">Google Analytics</span>
                   <span class="role">Git</span>
                </div>
             </div>
