--- a/jobsite-app.html
+++ b/jobsite-app.html
@@ -36,40 +36,40 @@
                   </div>
                </div>
                <div class="main-tag">
-                <span class="role">Prototyping</span> 
-                <span class="role">Usability Testing</span>
-                <span class="role">Visual Design</span>
-                <span class="role">Data Visualizaion</span>
-                <span class="role">HTML/CSS</span> 
-                <span class="role">Adobe CC</span>
-                <span class="role">JavaScript</span>
-                <span class="role">Design Systems</span> 
-                <span class="role">React</span>
-                <span class="role">Angular</span>
-                <span class="role">Motion Design</span>
-                <span class="role">Graphic Design</span> 
-                <span class="role">Video Editing/Filming</span>
-                <span class="role">UX Research</span>
-                <span class="role">Agile</span>
-                <span class="role">Marketing</span>
-                <span class="role">Mobile Design</span>
-                <span class="role">Web Design</span> 
-                <span class="role">Multimedia</span>
-                <span class="role">Information Architecture</span>
-                <span class="role">UX Writing/Content Design</span>
-                <span class="role">Sharepoint</span>
-                <span class="role">Design Thinking</span>
-                <span class="role">Lean UX</span> 
-                <span class="role">Scrum</span>
-                <span class="role">Invision</span>
-                <span class="role">Communication</span>
-                <span class="role">Accessibility</span>
-                <span class="role">Sketch</span>
-                <span class="role">3D</span>
-                <span class="role">Figma</span>
-                <span class="role">Framer</span>
-                <span class="role">WCAG</span>
-                <span class="role">Git</span>
+                 <span class="role">Prototyping</span> 
+		  <span class="role">Usability Testing</span>
+                  <span class="role">Visual Design</span>
+                  <span class="role">Data Visualizaion</span>
+                  <span class="role">HTML/CSS</span> 
+                  <span class="role">Adobe CC</span>
+                  <span class="role">JavaScript</span>
+                  <span class="role">Design Systems</span> 
+                  <span class="role">React</span>
+                  <span class="role">Angular</span>
+                  <span class="role">Motion Design</span>
+                  <span class="role">Graphic Design</span> 
+                  <span class="role">Video Editing/Filming</span>
+                  <span class="role">UX Research</span>
+                  <span class="role">Agile</span>
+                  <span class="role">Marketing</span>
+                  <span class="role">Mobile Design</span>
+                  <span class="role">Web Design</span> 
+                  <span class="role">Multimedia</span>
+		  <span class="role">Information Architecture</span>
+		  <span class="role">UX Writing/Content Design</span>
+                  <span class="role">A/B Testing</span>
+                  <span class="role">Design Thinking</span>
+                  <span class="role">Lean UX</span> 
+                  <span class="role">Scrum</span>
+                  <span class="role">Invision</span>
+	          <span class="role">Communication</span>
+                  <span class="role">Accessibility</span>
+		  <span class="role">Jira</span>
+		  <span class="role">3D</span>
+                  <span class="role">Figma</span>
+		  <span class="role">SQL</span>
+                  <span class="role">Google Analytics</span>
+                  <span class="role">Git</span>
                </div>
             </div>
          </div>
