--- a/network-app.html
+++ b/network-app.html
@@ -23,7 +23,7 @@
                      </h1>
                      <span class="res-co-wrapper">
 		     <a href="mailto:dhubat.haaruun@gmail.com" class="contact-btn">Contact Me</a>
-                     <a href="assets/Resume.pdf" class="btn-outline">Resume</a>
+                    <!-- <a href="assets/Resume.pdf" class="btn-outline">Resume</a> -->
                      </span>
                      <p class="icon-wrap">
                         <a href="https://github.com/Haaruun" class="social-link">
