--- a/insurance-app.html
+++ b/insurance-app.html
@@ -63,7 +63,7 @@
                   <span class="role">Design Thinking</span>
                   <span class="role">Lean UX</span> 
                   <span class="role">Scrum</span>
-                  <span class="role">Invision</span>
+                  <span class="role">AI</span>
 	          <span class="role">Communication</span>
                   <span class="role">Accessibility</span>
 		  <span class="role">Jira</span>
