--- a/network-app.html
+++ b/network-app.html
@@ -22,7 +22,7 @@
                         <br /> Dhubat
                      </h1>
                      <span class="res-co-wrapper">
-		     <a href="mailto:dhubat.haaruun@gmail.com" class="contact-btn">Contact Me</a>
+		    <!-- <a href="mailto:dhubat.haaruun@gmail.com" class="contact-btn">Contact Me</a>  -->
                     <!-- <a href="assets/Resume.pdf" class="btn-outline">Resume</a> -->
                      </span>
                      <p class="icon-wrap">
